<resources>
    <string name="app_name">Inventory</string>
    <string name="action_insert_dummy_data">add dummy data</string>
    <string name="action_delete_all_entries">delete all</string>
    <string name="action_save">save</string>
    <string name="action_delete">delete</string>
    <string name="empty_view_title_text">It\\\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="editor_activity_title_new_product">Add a product</string>
    <string name="products">Products</string>
    <string name="product_name">Product Name</string>
    <string name="hint_product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="up">+1</string>
    <string name="down">-1</string>
    <string name="quan_value">0</string>
    <string name="price_label">Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="hint_Supplier_name">Supplier Name</string>
    <string name="hint_Supplier_email">Supplier Email</string>
    <string name="supplier_Phone">Supplier Phone</string>
    <string name="hint_Supplier_phone">Supplier Phone</string>
    <string name="editor_activity_title_edit_prduct">Product Details</string>
    <string name="editor_insert_product_failed">Save Product Failed</string>
    <string name="editor_insert_pet_successful">Save Product Success</string>
    <string name="editor_update_product_failed">Update Product Failed</string>
    <string name="editor_update_pet_successful">Update Product Success</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this pet?</string>
    <string name="editor_delete_product_failed">Delete Product Failed</string>
    <string name="editor_delete_product_successful">Delete Product Success</string>
    <string name="add_product_editor_label">Add a Product</string>
    <string name="unknown_supplier">Unknown Supplier</string>
    <string name="sale">Sale</string>
    <string name="supplier">Supplier:\t\t</string>
    <string name="price_t_t">Price:\t\t\t\t\t</string>
    <string name="quantity_t_t">Quantity:\t\t</string>
    <string name="contact_supplier">Contact Supplier</string>
    <string name="warning_save">You Should Fill All Information</string>
</resources>
