<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="@dimen/activity_margin"
tools:context="com.example.alaa93h.inventory.EditorActivity">

<!-- Product Name -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/product_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_product_name"
        android:hint="@string/hint_product_name"
        android:inputType="textCapWords" />

</LinearLayout>

<!--Price-->
<LinearLayout

    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_marginRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_label" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_price"
        android:hint="@string/price"
        android:inputType="textCapWords" />

</LinearLayout>

<!-- Quantity -->
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">

    <TextView
        android:text="@string/quantity"
        android:layout_marginRight="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:id="@+id/quan_value"
        android:text="@string/quan_value"
        android:inputType="number"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/up"
        android:layout_marginRight="10dp"
        android:text="@string/up"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/down"
        android:layout_marginRight="20dp"
        android:text="@string/down"/>

</LinearLayout>

<!-- Supplier Name -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/supplier_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_supplier_name"
        android:hint="@string/hint_Supplier_name"
        android:inputType="textCapWords" />

</LinearLayout>

<!-- Supplier Email -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/supplier_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_supplier_email"
        android:hint="@string/hint_Supplier_email"
        android:inputType="textCapWords" />

</LinearLayout>

<!-- Supplier Phone -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/supplier_Phone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_supplier_phone"
        android:hint="@string/hint_Supplier_phone"
        android:inputType="phone"/>

</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_supplier"
        android:id="@+id/contact"/>
</LinearLayout>
